--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -4,7 +4,7 @@ body,
             padding: 0;
             height: 100%;
             /* background: #0e2f44 !important; */
-            background-image: url("C:/Users/Ganesh.Jejireddy/Documents/capstoneangular/loginpage/src/assets/bg2.jpg");
+            background-image: url("bg2.jpg");
 			 background-position: center;
 			background-repeat: no-repeat;
 			background-size: cover;
