--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+You can add global styles to this file, and also import other style files
 
 body,
 html {
@@ -80,8 +80,8 @@ html {
             padding: 0;
             height: 100%;
              /* background: #0e2f44 !important;  */
-            background-image: url("C:/Users/Ganesh.Jejireddy/Documents/capstoneangular/loginpage/src/assets/bg2.jpg");
-			 background-position: center;
+             /* background-image: url("C:/Users/Ganesh.Jejireddy/Documents/capstoneangular/loginpage/src/assets/bg2.jpg"); 
+			 background-position: center; */
 			background-repeat: no-repeat;
             background-size:cover;
 
