--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 
 
 
-<router-outlet></router-outlet>
+ <router-outlet></router-outlet> 
+ <!-- <br>
+ <div>
+<app-footer></app-footer>
+</div> -->
+
   
     <!-- <app-login1></app-login1> -->
     <!-- <app-register></app-register> -->
@@ -15,3 +20,4 @@
 
 <!-- <app-login1></app-login1> -->
   
+<!-- <app-feedback></app-feedback> -->
