--- a/src/app/feedback/feedback.component.css
+++ b/src/app/feedback/feedback.component.css
@@ -1,12 +1,11 @@
 body{
     font: Montserrat-black;
-    background-image: url("corporate.jpg") ;
   
   }
   
   
   #title{
-    background-color:#4fcaff;
+    background-color:#0e2f44;
     color: #fff;
     /* border-bottom-left-radius: 5rem; */
   }
@@ -27,12 +26,13 @@ body{
     color:#fff;
   }
   .navbar{
-    padding-right: 2rem;
+    /* padding-right: 2rem; */
+    margin-right: 10rem;
     
   }
   .navbar-brand{
     font-family: "Ubuntu";
-    font-size: 3.5rem;
+    font-size: 2.9rem;
     
     
     
@@ -41,7 +41,7 @@ body{
   .nav-link{
     font-size: 1.2rem;
     font-family: "Montserrat-black";
-    color: white;
+    color: #fff;
     /* color: bisque; */
   }
   #navbarSupportedContent{
@@ -61,11 +61,11 @@ body{
     text-align: center;
     padding: 5%;
   }
-  /* .ia{
+  .ia{
     color: #0a668d;
     margin-bottom: 1rem;
   
-  } */
+  }
   
   #intro{
     padding: 50px 10px 10px 10px;
@@ -73,7 +73,7 @@ body{
     font:"Montserrat-black";
     font-weight: bold;
     font-size: 18px;
-    
+  
     
     
     
