--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -15,6 +15,7 @@
   
     
   </head>
+
 <body>
 
 
@@ -33,24 +34,33 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link"
-              routerLink="/event"
+              routerLink="/booking"
               routerLinkActive="activebutton"
               ariaCurrentWhenActive="page">
-              <strong>Events</strong>
+              <strong>Booking</strong>
               </a>    </li>
               <li class="nav-item">
                 <a class="nav-link"
-                routerLink="/user"
+                routerLink="/calendar"
                 routerLinkActive="activebutton"
                 ariaCurrentWhenActive="page">
-                <strong>User</strong>
+                <strong>Calendar</strong>
                 </a>    </li>
+           
             <li class="nav-item">
-              <a class="nav-link" href="**"><strong>Bookings</strong></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="**"><strong>Calendar</strong></a>
-            </li>
+              <a class="nav-link"
+              routerLink="/feedback"
+              routerLinkActive="activebutton"
+              ariaCurrentWhenActive="page">
+              <strong>Feedback</strong>
+              </a>    </li>
+              <li class="nav-item">
+                <a class="nav-link"
+                routerLink="/contactus"
+                routerLinkActive="activebutton"
+                ariaCurrentWhenActive="page">
+                <strong>Contactus</strong>
+                </a>    </li>
           </ul>
         </div>
       </nav>
