--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -1,12 +1,11 @@
 body{
     font: Montserrat-black;
-    background-image: url("corporate.jpg") ;
   
   }
   
   
   #title{
-    background-color:#4fcaff;
+    background-color:#0e2f44;
     color: #fff;
     /* border-bottom-left-radius: 5rem; */
   }
@@ -32,7 +31,7 @@ body{
   }
   .navbar-brand{
     font-family: "Ubuntu";
-    font-size: 3.5rem;
+    font-size: 2.9rem;
     
     
     
@@ -41,7 +40,7 @@ body{
   .nav-link{
     font-size: 1.2rem;
     font-family: "Montserrat-black";
-    color: white;
+    color: #fff;
     /* color: bisque; */
   }
   #navbarSupportedContent{
@@ -61,11 +60,11 @@ body{
     text-align: center;
     padding: 5%;
   }
-  /* .ia{
+  .ia{
     color: #0a668d;
     margin-bottom: 1rem;
   
-  } */
+  }
   
   #intro{
     padding: 50px 10px 10px 10px;
@@ -73,7 +72,7 @@ body{
     font:"Montserrat-black";
     font-weight: bold;
     font-size: 18px;
-    
+  
     
     
     
