--- a/src/app/login1/login1.component.html
+++ b/src/app/login1/login1.component.html
@@ -6,29 +6,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script>
-		var attempt = 3;
-		function validate(){
-		var username = document.getElementById("user").value;
-		var password = document.getElementById("password").value;
-		if(username == "admin" && password == "admin"){
-			alert("Login Succesful");
-			window.location="admin.html"
-			return false;
-		}
-		else{
-			attempt --;
-			alert("You have left " +attempt+" attempt;");
-			if(attempt == 0){
-				document.getElementById("user").disabled = true;
-				document.getElementById("password").disabled = true;
-				document.getElementById("user").disabled = true;
-				return false;
-			}
-		}
-		}
-
-	</script>
+	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
 		integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 		
@@ -39,10 +17,10 @@
 </head>
 
 <body>
-	<p style="color: aliceblue; font-weight: bolder;
+	<!-- <p style="color: aliceblue; font-weight: bolder;
 	font-size: x-large; font-family: 'Courier New', Courier, monospace; margin-left: 55rem;">
 	{{ dateToday }}
-</p>
+</p> -->
 	<!-- {% if messages %}
 	{% for message in messages %}
 	<div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
@@ -107,3 +85,4 @@
 </body>
 
 </html>
+<app-footer></app-footer>
