booking page done

--- a/src/app/updateevents/updateevents.component.html
+++ b/src/app/updateevents/updateevents.component.html
@@ -49,10 +49,10 @@
                         </li>
                         <li class="nav-item">
                           <a class="nav-link"
-                          routerLink="/updateevents"
+                          routerLink="/event"
                           routerLinkActive="activebutton"
                           ariaCurrentWhenActive="page">
-                          <strong>Updateevents</strong>
+                          <strong>Events</strong>
                           </a>
                         </li>
                       </ul>
@@ -142,7 +142,7 @@
                         </div> -->
                       </div>
                 <div class="col-12">
-                  <button class="btn btn-success" (click)="createEvent()">AddEvent</button>                </div>
+                  <button class="btn btn-success" (click)="updateEvent()">UpdateEvent</button>                </div>
               </form>
               <!-- <div class="container">
                 <table class="table table-hover">
