--- a/src/app/updateevents/updateevents.component.css
+++ b/src/app/updateevents/updateevents.component.css
@@ -1,12 +1,11 @@
 body{
     font: Montserrat-black;
-     background-image: url("corporate.jpg") ; 
   
   }
   
   
   #title{
-    background-color:#0e2f44 ;
+    background-color:#4fcaff;
     color: #fff;
     /* border-bottom-left-radius: 5rem; */
   }
@@ -16,7 +15,7 @@ body{
   }
   h1{
     font:"Montserrat-black";
-    font-size: 2.3rem;
+    font-size: 2.6rem;
     line-height: 1.5;
     font-weight: 400;
   }
@@ -27,13 +26,12 @@ body{
     color:#fff;
   }
   .navbar{
-    /* padding-right: 2rem; */
-    margin-right: 10rem;
+    padding-right: 2rem;
     
   }
   .navbar-brand{
     font-family: "Ubuntu";
-    font-size: 2.9rem;
+    font-size: 3.5rem;
     
     
     
@@ -74,7 +72,7 @@ body{
     font:"Montserrat-black";
     font-weight: bold;
     font-size: 18px;
-    
+  
     
     
     
